-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11, 12, 13, 14, 15
-
Component/s: hotspot
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8240804 | 14.0.2 | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8246595 | 13.0.4 | Tobias Hartmann | P3 | Resolved | Fixed | b04 |
| JDK-8240065 | 11.0.8-oracle | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
| JDK-8240358 | 11.0.8 | Tobias Hartmann | P3 | Resolved | Fixed | b01 |
If UseUniqueSubclasses is enabled, C2 tries to narrow the type of array elements on access to avoid type checks:
http://hg.openjdk.java.net/jdk/jdk/file/690fc7e5a90f/src/hotspot/share/opto/parse2.cpp#l126
But the fix forJDK-8202377 added code that overwrites the elemtype:
http://hg.openjdk.java.net/jdk/jdk/rev/ffa644980dff#l27.26
http://hg.openjdk.java.net/jdk/jdk/file/690fc7e5a90f/src/hotspot/share/opto/parse2.cpp#l126
But the fix for
http://hg.openjdk.java.net/jdk/jdk/rev/ffa644980dff#l27.26
- backported by
-
JDK-8240065 C2's UseUniqueSubclasses optimization is broken for array accesses
-
- Resolved
-
-
JDK-8240358 C2's UseUniqueSubclasses optimization is broken for array accesses
-
- Resolved
-
-
JDK-8240804 C2's UseUniqueSubclasses optimization is broken for array accesses
-
- Resolved
-
-
JDK-8246595 C2's UseUniqueSubclasses optimization is broken for array accesses
-
- Resolved
-
- relates to
-
JDK-8202377 Modularize C2 GC barriers
-
- Resolved
-