8239142: C2's UseUniqueSubclasses optimization is broken for array accesses

Avoid resetting the elemtype for array accesses.

Reviewed-by: vlivanov, eosterlund